[tool.poetry]
name = "mqtt-io"
version = "2.0.0-b8"
description = "Expose GPIO modules (Raspberry Pi, Beaglebone, PCF8754, PiFace2 etc.), digital sensors (LM75 etc.) and serial streams to an MQTT server for remote control and monitoring."
authors = ["Ellis Percival <mqtt-io@failcode.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = ">=5.3.1"
Cerberus = "^1.3.2"
typing-extensions = "^3.7.4"
dataclasses = { version = "^0.8", python = ">=3.6,<3.7" }
asyncio-mqtt = "^0.8.1"

[tool.poetry.dev-dependencies]
mock = { version = "^4.0.3", python = ">=3.6,<3.8" }
pytest = "^6.2.2"
tox = "^3.22.0"
pylint = "^2.6.2"
mypy = "^0.812"
behave = "^1.2.6"
coverage = "^5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
